# Hackathon-5-Todo-App

./: .gitignore  AI_FALLBACK_SYSTEM.md  CLAUDE.md  COMPLETE_SETUP_GUIDE.md  DARK_MODE_GUIDE.md  DEBUG_STEPS.md  DEPLOYMENT_GUIDE.md  FINAL_SYSTEM_STATUS.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_CHECKLIST.md  TASK_NAME_SUPPORT.md  UI_UPGRADES_GUIDE.md  main.py  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.hf  README.md  alembic.ini  app.py  deploy-to-hf.sh  init_db.py  pyproject.toml  requirements-hf.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_01_08_2308_d9b88e81e064_create_users_and_todos_tables.py  2026_01_27_2258_62a634713071_add_conversation_and_message_tables_for_.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  agent_runner.py  task_command_parser.py  todo_agent.py
backend/app/mcp_server/: __init__.py  server.py
backend/app/mcp_server/tools/: __init__.py  task_tools.py  validators.py
backend/app/mcp_tools/: __init__.py  todo_mcp_tools.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  conversation.py  message.py  todo.py  user.py
backend/app/routers/: __init__.py  auth.py  chat.py  todos.py
backend/app/schemas/: __init__.py  auth.py  conversation.py  message.py  todo.py
backend/app/services/: __init__.py  auth.py  conversation.py  todo.py
backend/app/utils/: __init__.py  errors.py
backend/migrations/: 002_add_priority_tags.py
docs/: api.md  (+1 more)
(+134 files in other folders)
